# lego-element-lookup

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.example.json  lego_lookup.py  pyproject.toml  requirements.txt
.github/workflows/: desktop-release.yml  tests.yml
assets/: generate_icons.py
packaging/: desktop_entry.py
packaging/linux/: AppRun  build-appimage.sh  io.github.mes30004e.lego-element-lookup.desktop  io.github.mes30004e.lego-element-lookup.metainfo.xml  lego-element-lookup  lego-element-lookup.desktop
packaging/macos/: create-dmg.sh  dmg_settings.py
packaging/pyinstaller/: lego-element-lookup.spec
packaging/windows/: installer.iss
scripts/: setup-linux.sh  setup-macos.sh  setup-windows.ps1
src/lego_element_lookup/: __init__.py  cli.py  clipboard.py  config.py  downloader.py  icon_generation.py  lookup.py  preview.py  relationship_cache.py  relationships.py  secrets.py  services.py  set_metadata.py
src/lego_element_lookup/gui/: __init__.py  about.py  app.py  main_window.py  responsive.py  scrollable.py  set_chooser.py  set_manager.py  settings_window.py  tasks.py  theme.py  widgets.py  window_layout.py  wizard.py
tests/: conftest.py  test_bundle_size.py  test_cli.py  test_clipboard.py  test_colour.py  test_desktop_core.py  test_desktop_shell.py  test_final_ui.py  test_gui_startup.py  test_lookup.py  test_match_chooser.py  test_packaging_presentation.py  test_phase2_services.py  test_phase3_polish.py  test_phase3_preferences.py  test_preview.py  test_relationships.py  test_responsive_ui.py  test_set_management.py  test_window_layout.py  test_window_resizing.py
tools/: report_bundle_size.py
tools/baselines/: v1.2.2.json
