[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lego-element-lookup"
version = "1.0.0"
description = "Look up LEGO element IDs in an offline Rebrickable set inventory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "LEGO Element Lookup contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
lego-lookup = "lego_element_lookup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
