[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lego-element-lookup"
version = "1.4.1"
description = "Look up LEGO element IDs in an offline Rebrickable set inventory"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "LEGO Element Lookup contributors"}]
dependencies = ["certifi>=2024.8.30", "keyring>=25,<26", "Pillow>=11,<13"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/MES30004E/lego-element-lookup"
Changelog = "https://github.com/MES30004E/lego-element-lookup/blob/main/CHANGELOG.md"
Issues = "https://github.com/MES30004E/lego-element-lookup/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]
packaging = ["pyinstaller>=6.10,<7", "dmgbuild>=1.6,<2"]

[project.scripts]
lego-lookup = "lego_element_lookup.cli:main"

[project.gui-scripts]
lego-element-lookup = "lego_element_lookup.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
